ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/Generics/parserGreaterThanTokenAmbiguity14/input.ts.stderr
error: Expected an expression after this
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/Generics/parserGreaterThanTokenAmbiguity14/input.ts:1:3
  |
1 | 1 >>
  |   ^^

error[1005]: Expected a statement
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/Generics/parserGreaterThanTokenAmbiguity14/input.ts:2:1
  |
2 | = 2;
  | ^

